# cwSDTWnano

./: README.md  genome_subseq  nanopore_sig  sat-query_centos6.5  sat-query_fedora25  sat-query_ubuntu14
SATnano/: CMakeLists.txt  SATnano.kdev4
SATnano/.kdev4/: SATnano.kdev4
SATnano/lib/fast5/include/: CMakeLists.txt
SATnano/lib/fast5/include/fast5/: hdf5_tools.hpp
SATnano/lib/wavelib/: CMakeLists.txt
SATnano/lib/wavelib/src/: CMakeLists.txt
SATnano/src/: CMakeLists.txt
SATnano/src/6mer/: 6mer_index.cpp  6mer_index.h  6mer_index_official.rc  CMakeLists.txt
SATnano/src/fastalign/: CMakeLists.txt  main.cpp  opts.h
SATnano/src/fastquery/: CMakeLists.txt  main.cpp  opts.h
SATnano/src/mer2seq/: CMakeLists.txt  main.cpp  opts.h
SATnano/src/proc/: CMakeLists.txt  base_fun.cpp  io.cpp  io.h  proc.cpp  proc.h  resample.cpp
SATnano/src/util/: CMakeLists.txt
plot_nanofigure/: README  plot_figure.sh  refseq.fasta  wsout_SNP.fasta
plot_nanofigure/aligned_signals/: 00029623-7ead-4d1b-a6d1-75591a53ad24.reso_new  1e8de2f2-f9c0-4caa-9328-d2ba274d76e0.reso_new  2dd2d619-2f53-4834-994f-615f44f450e5.reso_new  95cec037-4dd8-4787-8968-6eca527586c7.reso_new  9b693934-2a63-4c0e-a22f-e5b50a1d4146.reso_new  b89aa655-8d3b-4740-b4a9-f40c7ba83fa6.reso_new  d542f94b-d12d-4e43-bc21-fcc565faa6b6.reso_new  d9536cf1-afd7-4d9d-8eb7-e35ff3b9db22.reso_new  ea958fc5-ba10-41cd-addc-1821d2bf0896.reso_new
plot_nanofigure/example/: 19888736-cfd5-4f6d-ab49-5d87390773ce.reso_new  1d6a90cd-42fd-4efd-878e-fae8878fca34.reso_new  57f6bf7b-9246-484a-a34e-c2e0beb038ae.reso_new  5d7ca9be-50de-48c1-9a35-9067e443a641.reso_new  5e43f732-6511-4398-8503-042fb3b57508.reso_new  7a31ebff-42dc-44a2-8dd9-32d9234fe657.reso_new  835937c6-a451-4929-a659-62ce247ce06b.reso_new  893f2c09-bc3d-418d-877a-605b2ba39d22.reso_new  968101ad-96f7-4533-9898-f9c501a50b9a.reso_new  blast_out  c0f94244-5c9d-435f-b84f-84add0575d6a.reso_new  ef703e12-700f-402a-8c7e-506209604578.reso_new  f17c2f07-ae20-4198-a5a1-f55fd5917419.reso_new  final_list  ref.seqsig  ref.seqsig_posi  (+6 more)
(+7 files in other folders)
